# spdiu

./: .gitignore  .pre-commit-config.yaml  README.md  REUSE.toml  invoke.example.yaml  invoke.yaml.example  local_tasks.example.py  local_tasks.py.example  pyproject.toml  tasks.py
.github/workflows/: main.yml  pypi.yml  test.yml
doc/: about.md  api.md  configuration.md  installation.md  tasks.md  usage.md
spdiu/: __init__.py  conftest.py  model.py  tasks.py  test_model.py  test_util.py  util.py
spdiu/collections/: __init__.py  cheat.py  cheats.py  dev.py  display.py  get.py  saves.py  slots.py  test_slots.py
spdiu/templates/: invoke.yaml  tasks.py
src/spdiu/: __init__.py  cli.py  config.py  conftest.py  program.py  spdiu.py  styles.py  tasks.py  util.py
src/spdiu/collections/: __init__.py  cheats.py  dev.py  display.py  get.py  slots.py
src/spdiu/model/: __init__.py  folders.py  game.py
src/spdiu/templates/: invoke.example.yaml  spdiu.yaml  tasks.py
tests/: __init__.py  conftest.py  test_model.py  test_util.py
tests/00-app/: test_app.py
tests/00-util/: test_util_dirs.py  test_util_formats.py
tests/10-app/: test_app.py
tests/10-util/: __init__.py
tests/20-model/: __init__.py  test_game_class_classes.py  test_game_dir_classes.py
tests/30-collections/: __init__.py  test_slots.py
