# Copyright (C) 2025 Tasos Alvas <tasos.alvas@qwertyuiopia.com>
# SPDX-License-Identifier: AGPL-3.0-or-later
[project]
name = "spdiu"
version = "0.1.0"
description = "A collection of Invoke tasks that manage Shattered Pixel Dungeon game data."
authors = [
    {name = "Tasos Alvas", email = "tasos.alvas@qwertyuiopia.com"}
]
license = "AGPL-3.0-or-later"
readme = "README.md"
requires-python = ">=3.11"
dependencies = []


[tool.uv]
package = false


[tool.ruff.lint]
extend-select = [
    "D",    # pydocstyle
]


[tool.ruff.lint.pydocstyle]
# Enforces PEP-257 docstrings
convention="pep257"


[tool.ruff.format]
docstring-code-format=true

[dependency-groups]
dev = [
    "pre-commit>=4.5.1",
    "reuse>=6.2.0",
    "ruff>=0.14.10",
]
