# Copyright (C) 2025 Tasos Alvas <tasos.alvas@qwertyuiopia.com>
# SPDX-License-Identifier: AGPL-3.0-or-later
[project]
name = "spdiu"
version = "0.1.0"
description = "A collection of Invoke tasks that manage Shattered Pixel Dungeon game data."
authors = [
    {name = "Tasos Alvas", email = "tasos.alvas@qwertyuiopia.com"}
]
license = "AGPL-3.0-or-later"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "invoke>=2.2.1",
]

[dependency-groups]
dev = [
    "pre-commit>=4.5.1",
    "pytest>=9.0.2",
    "reuse>=6.2.0",
    "ruff>=0.14.10",
]

[project.scripts]
siu = "spdiu.cli:main"


[build-system]
requires = ["uv_build>=0.9.18,<0.10.0"]
build-backend = "uv_build"

[tool.uv]
package = true


[tool.ruff.lint]
extend-select = [
    "D",    # pydocstyle
    "PT",   # flake8-pytest-style
]

[tool.ruff.lint.pydocstyle]
convention="pep257"

[tool.ruff.format]
docstring-code-format=true

[tool.pytest]
minversion = "9.0"
strict = true
pythonpath = ["src"]
addopts = [
    "--import-mode=importlib",
    "-p no:legacypath",
]
