# Copyright (C) 2025 Tasos Alvas <tasos.alvas@qwertyuiopia.com>
# SPDX-License-Identifier: AGPL-3.0-or-later
[project]
name = "spdiu"
version = "0.1.1"
description = "A collection of Invoke tasks that manage Shattered Pixel Dungeon game data."
authors = [
    {name = "Tasos Alvas", email = "tasos.alvas@qwertyuiopia.com"}
]
license = "AGPL-3.0-or-later"
license-files = ["LICENSES/*.txt"]
readme = "README.md"

requires-python = ">=3.11"
dependencies = [
    "invoke>=2.2.1",
]

keywords = ["shattered-pixel-dungeon", "remix", "download", "play", "save", "cheat", "inspect"]

# https://pypi.org/classifiers/
classifiers = [
    "Environment :: Console",
    "Development Status :: 3 - Alpha",
    # "Development Status :: 4 - Beta",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: GNU Affero General Public License v3 or later (AGPLv3+)",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Topic :: Games/Entertainment",
    "Topic :: Games/Entertainment :: Role-Playing",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Utilities",
]


[project.urls]
PyPi = "https://pypi.org/project/spdiu/"
Github = "https://github.com/tasosalvas/spdiu/"


[project.scripts]
siu = "spdiu.cli:main"
spdiu = "spdiu.cli:main"


[dependency-groups]
dev = [
    "pre-commit>=4.5.1",
    "pytest>=9.0.2",
    "reuse>=6.2.0",
    "ruff>=0.14.10",
]


[build-system]
requires = ["uv_build>=0.9.18,<0.10.0"]
build-backend = "uv_build"

[tool.uv]
package = true


[tool.ruff.lint]
extend-select = [
    "D",    # pydocstyle
    "PT",   # flake8-pytest-style
]

[tool.ruff.lint.pydocstyle]
convention="pep257"

[tool.ruff.format]
docstring-code-format=true

[tool.pytest]
minversion = "9.0"
strict = true
pythonpath = ["src"]
addopts = [
    "--import-mode=importlib",
    "-p no:legacypath",
]
